fixed overflow display

--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@ main {
   color: var(--primary-orange);
 }
 
+/* BUTTON COMPONENT */
 .scores {
   margin: 20px 0;
   display: flex;
@@ -75,23 +76,107 @@ main {
   align-items: center;
 }
 
-.scores > h4 {
+.scores > button {
   background-color: var(--bg-inside);
-  width: 40px;
-  height: 40px;
+  width: 43px;
+  height: 43px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
   color: var(--light-grey);
   cursor: pointer;
+  border: none;
+  font-weight: 600;
 }
 
-.submit {
-  margin-top: 10px;
-  padding: 10px 7rem;
+button:hover {
+  background-color: var(--primary-orange);
+  color: var(--white);
+  font-weight: 600;
+  transition: background-color 0.32s;
+}
+
+button.active {
+  background-color: var(--light-grey);
+  color: var(--color-white);
+}
+
+#submit {
+  margin-top: 8px;
+  padding: 12px 7rem;
   background-color: var(--primary-orange);
   color: var(--white);
   border: none;
   border-radius: 30px;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 700;
+  margin-left: 1.2rem;
+}
+
+#submit:hover {
+  background-color: var(--white);
+  color: var(--primary-orange);
+  transition: background-color 0.32s;
+}
+
+/* SUBMIT COMPONENt */
+
+.results {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  /* transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transform: scale(0);
+  opacity: 0; */
+}
+
+.success {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--primary-blue);
+  padding: 40px 20px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.success img {
+  padding: 0;
+  transform: scale(0.85);
+  margin-bottom: 20px;
+}
+
+.selected-msg {
+  width: 65%;
+  text-align: center;
+  background-color: var(--bg-inside);
+  border-radius: 30px;
+  padding: 0.4rem 10px;
+  margin-top: 0.8rem;
+  color: var(--primary-orange);
+  font-weight: 500;
+  word-spacing: 1px;
+}
+
+.thank-you {
+  font-size: 30px;
+  color: var(--white);
+  margin: 30px 0 10px 0;
+}
+
+.results p {
+  text-align: center;
+}
+
+@media screen and(max-width:450px) {
+  main {
+    max-width: 375px;
+  }
 }
